Serve Go and front end dev servers through nginx
